--- a/chrono.html
+++ b/chrono.html
@@ -8,7 +8,10 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 </head>
 <body>
-<header><h1>⏱️ Chrono simple</h1><a class="btn" href="menu.html">⬅️ Modes</a></header>
+<header>
+  <h1>⏱️ Chrono simple</h1>
+  <div class="header-right"><a class="btn" href="menu.html">Modes</a><a class="btn" href="aide.html">Aide</a></div>
+</header>
 <main class="container">
   <section class="panel center"><div id="timer" class="timer">00:00.0</div></section>
   <section class="panel center">
@@ -25,7 +28,7 @@
   </section>
   <section id="qr" class="panel qr hidden"><h2>QR compatible ScanProf</h2><div id="qrBox" class="qr-box"></div></section>
 </main>
-<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUX — JB</div>
+<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB</div>
 
 <div id="modal" class="modal">
   <div class="card">
