--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header><h1>Choisir un mode</h1><a class="btn" href="aide.html">❓ Aide</a></header>
+<header>
+  <h1>Choisir un mode</h1>
+  <div class="header-right"><a class="btn" href="index.html">Accueil</a><a class="btn" href="aide.html">Aide</a></div>
+</header>
 <main class="container">
   <section class="panel">
     <div id="ident" class="small"></div>
@@ -21,7 +24,7 @@
     </div>
   </section>
 </main>
-<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUX — JB</div>
+<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB</div>
 <script src="common.js"></script>
 <script>const p=requireParams(); if(p){ident.textContent=`${p.prenom} ${p.nom} — ${p.classe}`}</script>
 </body>
