--- a/multi.html
+++ b/multi.html
@@ -8,13 +8,16 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 </head>
 <body>
-<header><h1>👥 Multi (jusqu’à 4)</h1><a class="btn" href="menu.html">⬅️ Modes</a></header>
+<header>
+  <h1>👥 Multi (jusqu’à 4)</h1>
+  <div class="header-right"><a class="btn" href="menu.html">Modes</a><a class="btn" href="aide.html">Aide</a></div>
+</header>
 <main class="container">
   <section id="wrap" class="panel grid two"></section>
   <section class="panel center"><button id="stopAll" class="btn btn-lg">Stop général + QR</button></section>
   <section id="qr" class="panel qr hidden"><h2>QR compatible ScanProf</h2><div id="qrBox" class="qr-box"></div></section>
 </main>
-<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUX — JB</div>
+<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB</div>
 <script src="common.js"></script>
 <script>
 function card(i){
