--- a/vma.html
+++ b/vma.html
@@ -8,71 +8,73 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 </head>
 <body>
-<header><h1>🧪 VMA</h1><a class="btn" href="menu.html">⬅️ Modes</a></header>
+<header>
+  <h1>🧪 VMA</h1>
+  <div class="header-right"><a class="btn" href="menu.html">Modes</a><a class="btn" href="aide.html">Aide</a></div>
+</header>
 <main class="container">
-  <section class="panel center"><div id="timer" class="timer">00:00.0</div></section>
-  <section class="panel center">
-    <div class="action-bar">
-      <button id="start" class="btn btn-start btn-lg">Démarrer</button>
-      <button id="stop" class="btn btn-stop btn-lg" disabled>Stop</button>
-      <button id="reset" class="btn btn-reset" disabled>Réinitialiser</button>
-      <button id="openSettings" class="btn">⚙️</button>
-    </div>
-  </section>
-  <section id="qr" class="panel qr hidden"><h2>QR compatible ScanProf</h2><div id="qrBox" class="qr-box"></div></section>
-</main>
-<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUX — JB</div>
-
-<div id="modal" class="modal">
-  <div class="card">
-    <h2>Paramètres VMA</h2>
-    <label>Type de test
-      <select id="type">
-        <option value="cooper">Cooper (12 min)</option>
-        <option value="six">Demi-Cooper / Astrand (6 min)</option>
-        <option value="leger">Léger-Boucher (palier)</option>
-        <option value="vameval">VAMEVAL (palier)</option>
-        <option value="libre">Libre (distance & durée)</option>
-      </select>
-    </label>
-    <div class="grid two" id="freeFields">
-      <label>Distance (m) <input id="distance" type="number" min="0"></label>
-      <label>Durée (s) <input id="duree" type="number" min="0"></label>
+  <section class="panel">
+    <h2>Test</h2>
+    <div class="grid two">
+      <label>Type de test
+        <select id="type">
+          <option value="cooper">Cooper (12 min)</option>
+          <option value="six">Demi-Cooper / Astrand (6 min)</option>
+          <option value="leger">Léger-Boucher (palier)</option>
+          <option value="vameval">VAMEVAL (palier)</option>
+          <option value="libre">Libre (distance & durée)</option>
+        </select>
+      </label>
+      <label id="distField">Distance (m) <input id="distance" type="number" min="0"></label>
+      <label id="durField">Durée (s) <input id="duree" type="number" min="0"></label>
     </div>
     <div class="grid two hidden" id="palierFields">
       <label>Palier <input id="palier" type="number" min="1"></label>
       <label>Navettes (option) <input id="navettes" type="number" min="0"></label>
     </div>
-    <hr>
-    <div class="row"><button class="btn cancel">Annuler</button><button class="btn btn-primary save">Enregistrer</button></div>
-  </div>
-</div>
+    <div class="row" style="margin-top:10px">
+      <button id="calc" class="btn btn-primary">Calculer</button>
+      <div class="kpi"><span class="tag">VMA: <strong id="vOut">—</strong> km/h</span></div>
+      <button id="genQR" class="btn">📱 Générer QR</button>
+    </div>
+    <p class="small">Remplis les champs puis <strong>Calculer</strong>. Pour Cooper et 6′, entre la distance parcourue. Pour Libre, saisie distance & durée.</p>
+  </section>
+  <section id="qr" class="panel qr hidden"><h2>QR compatible ScanProf</h2><div id="qrBox" class="qr-box"></div></section>
+</main>
+<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB</div>
 
 <script src="common.js"></script>
 <script>
 const p=requireParams();
-let t0=null,tick=null, cfg={type:'cooper', distance:0, duree:720, palier:0, navettes:0};
-const timer=document.getElementById('timer');
-function sync(){ freeFields.classList.toggle('hidden', cfg.type==='leger'||cfg.type==='vameval'); palierFields.classList.toggle('hidden', !(cfg.type==='leger'||cfg.type==='vameval')); }
-bindModal('modal','openSettings',()=>{
-  cfg.type=type.value; cfg.distance=Number(distance.value||0); cfg.duree=Number(duree.value|| (cfg.type==='cooper'?720:cfg.type==='six'?360:0));
-  cfg.palier=Number(palier.value||0); cfg.navettes=Number(navettes.value||0); sync();
-});
-type.addEventListener('change',()=>{ if(type.value==='cooper') duree.value=720; else if(type.value==='six') duree.value=360; });
-sync();
-start.onclick=()=>{ t0=Date.now(); tick=setInterval(()=> timer.textContent=formatMs(Date.now()-t0), 100); start.disabled=true; stop.disabled=false; reset.disabled=true; };
-stop.onclick=()=>{ clearInterval(tick); stop.disabled=true; reset.disabled=false;
-  const duree_s = (cfg.type==='cooper'||cfg.type==='six') ? cfg.duree : Math.round((Date.now()-t0)/1000);
-  let vma=0, dist=cfg.distance;
-  if(cfg.type==='cooper'){ vma = +( (dist>0? dist : 0)*0.005 ).toFixed(2); }
-  else if(cfg.type==='six'){ vma = +( (dist>0? dist : 0)*0.01 ).toFixed(2); }
-  else if(cfg.type==='leger'){ vma = +(8.5 + 0.5*(Math.max(1,cfg.palier)-1)).toFixed(2); }
-  else if(cfg.type==='vameval'){ vma = +(8.0 + 0.5*(Math.max(1,cfg.palier)-1)).toFixed(2); }
-  else { vma = +( (cfg.distance>0 && cfg.duree>0) ? (cfg.distance/cfg.duree*3.6) : 0).toFixed(2); }
-  const item=buildScanProfItem({ nom:p.nom, prenom:p.prenom, classe:p.classe, sexe:p.sexe, distance_m: dist, duree_s, vma_kmh:vma });
+const typeSel=type, distI=distance, durI=duree, palF=document.getElementById('palierFields'), distF=document.getElementById('distField'), durF=document.getElementById('durField');
+function sync(){
+  const t=typeSel.value;
+  const isPal = (t==='leger'||t==='vameval');
+  palF.classList.toggle('hidden', !isPal);
+  distF.classList.toggle('hidden', isPal?true:false);
+  durF.classList.toggle('hidden', !(t==='libre'));
+  if(t==='cooper'){ durI.value=720; durF.classList.add('hidden'); distF.classList.remove('hidden'); }
+  if(t==='six'){ durI.value=360; durF.classList.add('hidden'); distF.classList.remove('hidden'); }
+}
+sync(); typeSel.addEventListener('change', sync);
+
+function compute(){
+  const t=typeSel.value;
+  let vma=0, dist=0, duree_s=0;
+  if(t==='cooper'){ dist=Number(distI.value||0); duree_s=720; vma=+(dist*0.005).toFixed(2); }
+  else if(t==='six'){ dist=Number(distI.value||0); duree_s=360; vma=+(dist*0.01).toFixed(2); }
+  else if(t==='leger'){ const pal=Number(document.getElementById('palier').value||0); vma=+(8.5+0.5*(Math.max(1,pal)-1)).toFixed(2); dist=0; duree_s=0; }
+  else if(t==='vameval'){ const pal=Number(document.getElementById('palier').value||0); vma=+(8.0+0.5*(Math.max(1,pal)-1)).toFixed(2); dist=0; duree_s=0; }
+  else { dist=Number(distI.value||0); duree_s=Number(durI.value||0); vma=+((dist>0&&duree_s>0 ? dist/duree_s*3.6 : 0)).toFixed(2); }
+  vOut.textContent=vma.toFixed(2);
+  return {vma, dist, duree_s};
+}
+document.getElementById('calc').onclick=compute;
+document.getElementById('genQR').onclick=()=>{
+  const r=compute();
+  const item=buildScanProfItem({ nom:p.nom, prenom:p.prenom, classe:p.classe, sexe:p.sexe, distance_m:r.dist, duree_s:r.duree_s, vma_kmh:r.vma });
   showQR([item]);
 };
-reset.onclick=()=>{ clearInterval(tick); timer.textContent='00:00.0'; start.disabled=false; stop.disabled=true; reset.disabled=true; document.getElementById('qr').classList.add('hidden'); };
 </script>
 </body>
 </html>
