--- a/6min.html
+++ b/6min.html
@@ -6,10 +6,10 @@
   <title>MultiChrono — 6 minutes</title>
   <link rel="stylesheet" href="../css/style.css">
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <script defer src="../js/ui.js"></script>
-  <script defer src="../js/csv.js"></script>
-  <script defer src="../js/qr.js"></script>
-  <script defer src="../js/chrono.js"></script>
+  <script defer src="ui.js"></script>
+  <script defer src="csv.js"></script>
+  <script defer src="qr.js"></script>
+  <script defer src="chrono.js"></script>
 </head>
 <body>
   <header class="mc-header">
