--- a/duel.html
+++ b/duel.html
@@ -1,123 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MultiChrono — Duel</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-  <script defer src="ui.js"></script>
-  <script defer src="csv.js"></script>
-  <script defer src="qr.js"></script>
-  <script defer src="duel.js"></script>
-  <style>
-    /* Petits ajustements de mise en page spécifiques duel */
-    .duel-grid{
-      display:grid; gap:14px;
-      grid-template-columns: 1fr; 
-    }
-    @media (min-width: 860px){
-      .duel-grid{ grid-template-columns: 1fr 1fr; }
-    }
-    .center-stop{
-      display:flex; align-items:center; justify-content:center; gap:12px; flex-wrap:wrap;
-    }
-    .duel-name{
-      font-weight:800; font-size:18px;
-    }
-  </style>
-</head>
-<body>
-  <header class="mc-header">
-    <a class="mc-back" href="../index.html">← Accueil</a>
-    <h1>Duel</h1>
-  </header>
-
-  <main class="mc-container">
-    <!-- Distance tour commune -->
-    <section class="mc-card">
-      <h2>Paramètres</h2>
-      <div class="mc-row">
-        <label class="mc-field">
-          <span>Distance d’un tour (m)</span>
-          <input id="lapLen" type="number" value="200">
-        </label>
-      </div>
-      <p class="mc-hint">La distance d’un tour peut être ajustée. Les incréments ¼, ½, ¾, 1 tour comptent pour chaque élève.</p>
-    </section>
-
-    <!-- Zone Duel -->
-    <section class="mc-card">
-      <h2>Chronomètre</h2>
-
-      <div class="center-stop" style="margin-bottom:10px">
-        <button id="startBtn" class="mc-btn mc-blue">▶️ Démarrer le duel</button>
-        <button id="resetBtn" class="mc-btn" disabled>↺ Reset</button>
-      </div>
-
-      <div class="duel-grid">
-        <!-- Élève A -->
-        <div class="mc-card">
-          <div class="duel-name">Coureur A</div>
-          <div class="mc-row">
-            <label class="mc-field"><span>Nom</span><input id="nomA" type="text" required></label>
-            <label class="mc-field"><span>Prénom</span><input id="prenomA" type="text" required></label>
-            <label class="mc-field"><span>Classe</span><input id="classeA" type="text" required></label>
-          </div>
-
-          <div id="displayA" class="mc-time">00:00</div>
-          <div class="center-stop">
-            <button id="stopA" class="mc-btn mc-red" disabled>⏹️ Arrêt A</button>
-          </div>
-
-          <div class="mc-increments">
-            <button class="mc-chip" data-inc-a="0.25" disabled>+¼ tour</button>
-            <button class="mc-chip" data-inc-a="0.5"  disabled>+½ tour</button>
-            <button class="mc-chip" data-inc-a="0.75" disabled>+¾ tour</button>
-            <button class="mc-chip" data-inc-a="1"    disabled>+1 tour</button>
-          </div>
-        </div>
-
-        <!-- Élève B -->
-        <div class="mc-card">
-          <div class="duel-name">Coureur B</div>
-          <div class="mc-row">
-            <label class="mc-field"><span>Nom</span><input id="nomB" type="text" required></label>
-            <label class="mc-field"><span>Prénom</span><input id="prenomB" type="text" required></label>
-            <label class="mc-field"><span>Classe</span><input id="classeB" type="text" required></label>
-          </div>
-
-          <div id="displayB" class="mc-time">00:00</div>
-          <div class="center-stop">
-            <button id="stopB" class="mc-btn mc-red" disabled>⏹️ Arrêt B</button>
-          </div>
-
-          <div class="mc-increments">
-            <button class="mc-chip" data-inc-b="0.25" disabled>+¼ tour</button>
-            <button class="mc-chip" data-inc-b="0.5"  disabled>+½ tour</button>
-            <button class="mc-chip" data-inc-b="0.75" disabled>+¾ tour</button>
-            <button class="mc-chip" data-inc-b="1"    disabled>+1 tour</button>
-          </div>
-        </div>
-      </div>
-
-      <p class="mc-hint">Les deux chronos démarrent en même temps. Chaque coureur s’arrête individuellement. Un seul **Reset** général.</p>
-    </section>
-
-    <!-- Résultat + QR + CSV -->
-    <section class="mc-card">
-      <h2>Résultats</h2>
-      <div id="qrcode" class="mc-qrcode"></div>
-      <div class="mc-controls">
-        <button id="genQR" class="mc-btn mc-blue" disabled>🧾 Générer le QR</button>
-        <button id="saveCsv" class="mc-btn">📄 Exporter CSV</button>
-      </div>
-      <p class="mc-hint">QR “duel” avec <code>eleves[ A, B ]</code> : Nom, Prénom, Classe, Durée en s, Distance en m.</p>
-    </section>
-  </main>
-
-  <footer class="mc-footer">
-    MultiChrono - L'Équipe EPS Lycée Vauban - LUXEMBOURG - JB
-  </footer>
-</body>
-</html>
+<html><body><h1>Chrono Duel</h1></body></html>
