--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-
-<!doctype html><html lang="fr"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ChronoVitesse • EPS</title><link rel="stylesheet" href="styles.css"></head><body>
-
-<header>
-  <h1>ChronoVitesse • EPS</h1>
-  <div class="header-right">
-    <a class="btn" href="index.html">Accueil</a>
-    <a class="btn" href="menu.html">Modes</a>
-    <a class="btn" href="aide.html">Aide</a>
-    <button class="btn" id="themeBtn">🌙 Sombre</button>
-  </div>
-</header>
-
-<main class="container"><section class="hero">
-  <h1>ChronoVitesse</h1><div class="small">Simple, épuré et compatible ScanProf</div>
-  <a class="btn btn-lg btn-primary" href="params.html">🚀 Commencer</a>
-  <a class="btn btn-ghost" href="aide.html">Aide</a>
-</section></main>
-<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB</div>
-<script src="common.js"></script><script>initTheme();</script>
-</body></html>
+<html><body><h1>MultiChrono - Accueil</h1></body></html>
