--- a/12min.html
+++ b/12min.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chrono libre</title>
+  <title>Chrono 12 minutes</title>
   <meta name="color-scheme" content="light dark" />
   <link rel="stylesheet" href="style.css">
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
@@ -14,7 +14,7 @@
 <body>
 <header class="mc-header">
   <a class="mc-back" href="index.html">← Accueil</a>
-  <h1>Chrono libre</h1>
+  <h1>Chrono 12 minutes</h1>
   <label class="mc-dark-switch"><input id="darkToggle" type="checkbox" /></label>
 </header>
 <main class="mc-container">
@@ -33,7 +33,7 @@
   </section>
   <section class="mc-card">
     <h2>Chronomètre</h2>
-    <div id="display" class="mc-time">00:00</div>
+    <div id="display" class="mc-time">12:00</div>
     <div class="mc-controls">
       <button id="startBtn" class="mc-btn mc-blue">Démarrer</button>
       <button id="stopBtn" class="mc-btn mc-red" disabled>Stop</button>
@@ -51,7 +51,7 @@
     <div id="qrcode" class="mc-qrcode"></div>
     <button id="saveCsv" class="mc-btn">Exporter CSV</button>
   </section>
-<script defer src="libre.js"></script>
+<script defer src="chrono12.js"></script>
 
 </main>
 <footer class="mc-footer">
