--- a/6min.html
+++ b/6min.html
@@ -1,1 +1,61 @@
-<html><body><h1>Chrono 6 minutes</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Chrono 6 minutes</title>
+  <meta name="color-scheme" content="light dark" />
+  <link rel="stylesheet" href="style.css">
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <script defer src="ui.js"></script>
+  <script defer src="csv.js"></script>
+  <script defer src="qr.js"></script>
+</head>
+<body>
+<header class="mc-header">
+  <a class="mc-back" href="index.html">← Accueil</a>
+  <h1>Chrono 6 minutes</h1>
+  <label class="mc-dark-switch"><input id="darkToggle" type="checkbox" /></label>
+</header>
+<main class="mc-container">
+
+  <section class="mc-card">
+    <h2>Identité</h2>
+    <div class="mc-row">
+      <label class="mc-field"><span>Nom</span><input id="nom" type="text" required></label>
+      <label class="mc-field"><span>Prénom</span><input id="prenom" type="text" required></label>
+      <label class="mc-field"><span>Classe</span><input id="classe" type="text" required></label>
+    </div>
+  </section>
+  <section class="mc-card">
+    <h2>Paramètres</h2>
+    <label class="mc-field"><span>Distance d’un tour (m)</span><input id="lapLen" type="number" value="200"></label>
+  </section>
+  <section class="mc-card">
+    <h2>Chronomètre</h2>
+    <div id="display" class="mc-time">06:00</div>
+    <div class="mc-controls">
+      <button id="startBtn" class="mc-btn mc-blue">Démarrer</button>
+      <button id="stopBtn" class="mc-btn mc-red" disabled>Stop</button>
+      <button id="resetBtn" class="mc-btn" disabled>Reset</button>
+    </div>
+    <div class="mc-increments">
+      <button data-inc="0.25" class="mc-chip" disabled>+¼ tour</button>
+      <button data-inc="0.5" class="mc-chip" disabled>+½ tour</button>
+      <button data-inc="0.75" class="mc-chip" disabled>+¾ tour</button>
+      <button data-inc="1" class="mc-chip" disabled>+1 tour</button>
+    </div>
+  </section>
+  <section class="mc-card">
+    <h2>Résultat</h2>
+    <div id="qrcode" class="mc-qrcode"></div>
+    <button id="saveCsv" class="mc-btn">Exporter CSV</button>
+  </section>
+<script defer src="chrono6.js"></script>
+
+</main>
+<footer class="mc-footer">
+  MultiChrono - L'Équipe EPS Lycée Vauban - LUXEMBOURG - JB
+</footer>
+</body>
+</html>
