--- a/duel.html
+++ b/duel.html
@@ -1,1 +1,81 @@
-<html><body><h1>Chrono Duel</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Duel</title>
+  <meta name="color-scheme" content="light dark" />
+  <link rel="stylesheet" href="style.css">
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <script defer src="ui.js"></script>
+  <script defer src="csv.js"></script>
+  <script defer src="qr.js"></script>
+</head>
+<body>
+<header class="mc-header">
+  <a class="mc-back" href="index.html">← Accueil</a>
+  <h1>Duel</h1>
+  <label class="mc-dark-switch"><input id="darkToggle" type="checkbox" /></label>
+</header>
+<main class="mc-container">
+
+  <section class="mc-card">
+    <h2>Paramètres</h2>
+    <div class="mc-row">
+      <label class="mc-field"><span>Distance d’un tour (m)</span><input id="lapLen" type="number" value="200"></label>
+    </div>
+    <p class="mc-hint">Les deux chronos démarrent ensemble, chaque coureur s'arrête individuellement.</p>
+  </section>
+  <section class="mc-card">
+    <div class="mc-row">
+      <div class="mc-card" style="flex:1">
+        <h3>Coureur A</h3>
+        <div class="mc-row">
+          <label class="mc-field"><span>Nom</span><input id="nomA" type="text"></label>
+          <label class="mc-field"><span>Prénom</span><input id="prenomA" type="text"></label>
+          <label class="mc-field"><span>Classe</span><input id="classeA" type="text"></label>
+        </div>
+        <div id="displayA" class="mc-time">00:00</div>
+        <div class="center"><button id="stopA" class="mc-btn mc-red" disabled>Arrêt A</button></div>
+        <div class="mc-increments">
+          <button class="mc-chip" data-inc-a="0.25" disabled>+¼</button>
+          <button class="mc-chip" data-inc-a="0.5" disabled>+½</button>
+          <button class="mc-chip" data-inc-a="0.75" disabled>+¾</button>
+          <button class="mc-chip" data-inc-a="1" disabled>+1</button>
+        </div>
+      </div>
+      <div class="mc-card" style="flex:1">
+        <h3>Coureur B</h3>
+        <div class="mc-row">
+          <label class="mc-field"><span>Nom</span><input id="nomB" type="text"></label>
+          <label class="mc-field"><span>Prénom</span><input id="prenomB" type="text"></label>
+          <label class="mc-field"><span>Classe</span><input id="classeB" type="text"></label>
+        </div>
+        <div id="displayB" class="mc-time">00:00</div>
+        <div class="center"><button id="stopB" class="mc-btn mc-red" disabled>Arrêt B</button></div>
+        <div class="mc-increments">
+          <button class="mc-chip" data-inc-b="0.25" disabled>+¼</button>
+          <button class="mc-chip" data-inc-b="0.5" disabled>+½</button>
+          <button class="mc-chip" data-inc-b="0.75" disabled>+¾</button>
+          <button class="mc-chip" data-inc-b="1" disabled>+1</button>
+        </div>
+      </div>
+    </div>
+    <div class="center" style="margin-top:10px">
+      <button id="startBtn" class="mc-btn mc-blue">Démarrer le duel</button>
+      <button id="resetBtn" class="mc-btn" disabled>Reset</button>
+    </div>
+  </section>
+  <section class="mc-card">
+    <h2>Résultats</h2>
+    <div id="qrcode" class="mc-qrcode"></div>
+    <button id="saveCsv" class="mc-btn">Exporter CSV</button>
+  </section>
+<script defer src="duel.js"></script>
+
+</main>
+<footer class="mc-footer">
+  MultiChrono - L'Équipe EPS Lycée Vauban - LUXEMBOURG - JB
+</footer>
+</body>
+</html>
