--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header class="mc-header">
   <h1>MultiChrono</h1>
-  <label class="mc-dark-switch"><input id="darkToggle" type="checkbox" /></label>
+  <label><input id="darkToggle" type="checkbox" /></label>
 </header>
 <main class="mc-container">
   <section class="mc-card">
@@ -21,13 +21,12 @@
       <a class="mc-btn mc-blue" href="12min.html">⏱️ 12 minutes</a>
       <a class="mc-btn mc-blue" href="libre.html">⏱️ Chrono libre</a>
       <a class="mc-btn mc-red" href="duel.html">⚔️ Duel</a>
-      <a class="mc-btn mc-yellow" href="prof.html">🎛️ Espace Prof (PIN)</a>
+      <a class="mc-btn mc-yellow" href="vma.html">📈 Tests VMA + QR</a>
+      <a class="mc-btn" href="aide.html">❓ Aide</a>
     </div>
-    <p class="mc-hint">QR codes compatibles ScanProf. Export CSV disponible sur chaque mode.</p>
+    <p class="mc-hint">QR codes compatibles ScanProf (Nom, Prénom, Classe + données du test).</p>
   </section>
 </main>
-<footer class="mc-footer">
-  MultiChrono - L'Équipe EPS Lycée Vauban - LUXEMBOURG - JB
-</footer>
+<footer class="mc-footer">MultiChrono - L'Équipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
 </body>
 </html>
