--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
       <a class="mc-btn mc-blue" href="libre.html">⏱️ Chrono libre</a>
       <a class="mc-btn mc-red" href="duel.html">⚔️ Duel</a>
       <a class="mc-btn mc-yellow" href="vma.html">📈 Tests VMA + QR</a>
+      <a class="mc-btn mc-yellow" href="prof.html">🎧 Espace Prof (PIN 57)</a>
       <a class="mc-btn" href="aide.html">❓ Aide</a>
     </div>
-    <p class="mc-hint">QR codes compatibles ScanProf (Nom, Prénom, Classe + données du test).</p>
+    <p class="mc-hint">QR codes compatibles ScanProf (Nom, Prénom, Classe + données du test). Mode Prof pour lancer les bips.</p>
   </section>
 </main>
 <footer class="mc-footer">MultiChrono - L'Équipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
