--- a/aide-libre.html
+++ b/aide-libre.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aide — MultiChrono (général)</title>
+  <title>Aide — Chrono libre</title>
   <meta name="color-scheme" content="light dark" />
   <link rel="stylesheet" href="style.css">
   <script defer src="ui.js"></script>
@@ -11,12 +11,12 @@
 <body>
 <header class="mc-header">
   <a class="mc-back" href="index.html">← Accueil</a>
-  <h1>Aide — MultiChrono (général)</h1>
+  <h1>Aide — Chrono libre</h1>
   <label><input id="darkToggle" type="checkbox" /></label>
 </header>
 <main class="mc-container">
   <section class="mc-card">
-  <p>Mode d’emploi global et compatibilité ScanProf. QR en JSON avec nom, prenom, classe + champs du test.</p>
+  <p>Chrono ascendant. Incréments de tours pendant la course.</p>
   </section>
 </main>
 <footer class="mc-footer">MultiChrono - L'Équipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
