--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MultiChrono</title>
+  <title>MultiChrono — Accueil</title>
   <meta name="color-scheme" content="light dark" />
   <link rel="stylesheet" href="style.css">
   <script defer src="ui.js"></script>
@@ -15,17 +15,35 @@
 </header>
 <main class="mc-container">
   <section class="mc-card">
-    <h2>Modules</h2>
+    <h2>Chronomètres</h2>
     <div class="mc-row">
       <a class="mc-btn mc-blue" href="6min.html">⏱️ 6 minutes</a>
       <a class="mc-btn mc-blue" href="12min.html">⏱️ 12 minutes</a>
       <a class="mc-btn mc-blue" href="libre.html">⏱️ Chrono libre</a>
+      <a class="mc-btn mc-blue" href="tour.html">🏁 Chrono Tour (laps)</a>
       <a class="mc-btn mc-red" href="duel.html">⚔️ Duel</a>
+    </div>
+  </section>
+
+  <section class="mc-card">
+    <h2>VMA & Prof</h2>
+    <div class="mc-row">
       <a class="mc-btn mc-yellow" href="vma.html">📈 Tests VMA + QR</a>
       <a class="mc-btn mc-yellow" href="prof.html">🎧 Espace Prof (PIN 57)</a>
-      <a class="mc-btn" href="aide.html">❓ Aide</a>
     </div>
-    <p class="mc-hint">QR codes compatibles ScanProf (Nom, Prénom, Classe + données du test). Mode Prof pour lancer les bips.</p>
+  </section>
+
+  <section class="mc-card">
+    <h2>Aide & documentation</h2>
+    <div class="mc-row">
+      <a class="mc-btn" href="aide.html">📘 Aide (générale)</a>
+      <a class="mc-btn" href="aide-6min.html">❓ Aide 6'</a>
+      <a class="mc-btn" href="aide-12min.html">❓ Aide 12'</a>
+      <a class="mc-btn" href="aide-libre.html">❓ Aide Libre</a>
+      <a class="mc-btn" href="aide-tour.html">❓ Aide Chrono Tour</a>
+      <a class="mc-btn" href="aide-duel.html">❓ Aide Duel</a>
+      <a class="mc-btn" href="aide-vma.html">❓ Aide VMA</a>
+    </div>
   </section>
 </main>
 <footer class="mc-footer">MultiChrono - L'Équipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
