--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="mc-row">
       <a class="mc-btn mc-blue" href="6min.html">⏱️ 6 minutes</a>
       <a class="mc-btn mc-blue" href="12min.html">⏱️ 12 minutes</a>
+      <a class="mc-btn mc-blue" href="demi-cooper.html">🏃‍♂️ Demi‑Cooper (6')</a>
       <a class="mc-btn mc-blue" href="libre.html">⏱️ Chrono libre</a>
       <a class="mc-btn mc-blue" href="tour.html">🏁 Chrono Tour (laps)</a>
       <a class="mc-btn mc-red" href="duel.html">⚔️ Duel</a>
@@ -29,7 +30,7 @@
     <h2>VMA & Prof</h2>
     <div class="mc-row">
       <a class="mc-btn mc-yellow" href="vma.html">📈 Tests VMA + QR</a>
-      <a class="mc-btn mc-yellow" href="prof.html">🎧 Espace Prof (PIN 57)</a>
+      <a class="mc-btn mc-yellow" href="prof.html">🎧 Espace Prof (plein écran)</a>
     </div>
   </section>
 
